<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondary"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        tools:layout_editor_absoluteY="72dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:width="200dp"
                android:autofillHints="true"
                android:background="@drawable/edit_rounded_border"
                android:inputType="text"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/textSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/surname"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editSurname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:width="200dp"
                android:autofillHints="true"
                android:background="@drawable/edit_rounded_border"
                android:inputType="text"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/textCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/cpf"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editCPF"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:width="200dp"
                android:autofillHints="true"
                android:background="@drawable/edit_rounded_border"
                android:inputType="text"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="E-mail"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:width="200dp"
                android:autofillHints="true"
                android:background="@drawable/edit_rounded_border"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>